<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.timekeeper.HomeActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
    <Button
        android:id="@+id/UI_BTN_checkIn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/check_in"/>
    <Button
        android:id="@+id/UI_BTN_checkOut"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/check_out"/>
    <Button
        android:id="@+id/UI_BTN_status"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/status"/>

    </LinearLayout>
</RelativeLayout>
