<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.timekeeper.StatusActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/check_in_time"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/check_out_time"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:text="@string/location"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="#000000"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/UI_LV_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
